<resources>
    <string name="app_name">CNIT355-Project</string>
    <string name="bobbyAddrTwoLines">308 W State St,\nWest Lafayette, IN 47906</string>
    <string name="bobbyTitle">Bobby T\'s Campus Bar</string>
    <string name="bobbyAddr">308 W State St, West Lafayette, IN 47906</string>
    <string name="wait">Wait Time:</string>
    <string name="currentWait">Current Wait</string>
    <string name="waitHours">N/A mins</string>
    <string name="hours">mins</string>
    <string name="mins">sec</string>
    <string name="waitMins">N/A sec</string>
    <string name="waitMain">- -</string>
    <string name="brothersTitle">Brothers Bar &amp; Grill</string>
    <string name="brothersAddr">306 W State St, West Lafayette, IN 47906</string>
    <string name="brothersAddrTwoLines">306 W State St,\nWest Lafayette, IN 47906</string>
    <string name="cactusTitle">Neon Cactus</string>
    <string name="cactusAddr">360 Brown St, West Lafayette, IN 47906</string>
    <string name="cactusAddrTwoLines">360 Brown St,\nWest Lafayette, IN 47906</string>
    <string name="harrysTitle">Harry\'s Chocolate Shop</string>
    <string name="harrysAddr">329 W State St, West Lafayette, IN 47906</string>
    <string name="harrysAddrTwoLines">329 W State St,\nWest Lafayette, IN 47906</string>
    <string name="whereElseTitle">Where Else Bar</string>
    <string name="whereElseAddr">135 S. Chauncey Ave, West Lafayette, IN 47906</string>
    <string name="whereElseAddrTwoLines">135 S. Chauncey Ave,\nWest Lafayette, IN 47906</string>
    <string name="callBrothers">Call Brother\'s</string>
    <string name="maps">Open in Maps</string>
    <string name="timer">Start Wait Timer</string>
    <string name="callBobby">Call Bobby T\'s</string>
    <string name="callCactus">Call Neon Cactus</string>
    <string name="callHarrys">Call Harry\'s</string>
    <string name="callWhereElse">Call Where Else</string>
    <string name="avgWait">Monday: 0 min\nTuesday: 0 min\nWednesday: 0 min\nThursday: 0 min\nFriday: 0 min\nSaturday: 0 min\nSunday: 0 min</string>
    <string name="bobbyTsHours">Monday: 5:00PM-3:00AM\nTuesday: 5:00PM-3:00AM\nWednesday: 5:00PM-3:00AM\nThursday: 5:00PM-3:00AM\nFriday: 5:00PM-3:00AM\nSaturday: 5:00PM-3:00AM\nSunday: 7:00PM-3:00AM</string>
    <string name="brothersHours">Monday: 11:00AM-3:00AM\nTuesday: 11:00AM-3:00AM\nWednesday: 11:00AM-3:00AM\nThursday: 11:00AM-3:00AM\nFriday: 11:00AM-3:00AM\nSaturday: 11:00AM-3:00AM\nSunday: 7:00AM-3:00AM</string>
    <string name="cactusHours">Monday: Closed\nTuesday: Closed\nWednesday: Closed\nThursday: 8:00PM-3:00AM\nFriday: 8:00PM-3:00AM\nSaturday: 8:00PM-3:00AM\nSunday: Closed</string>
    <string name="harrysHours">Monday: 11:00AM-3:00AM\nTuesday: 11:00AM-3:00AM\nWednesday: 11:00AM-3:00AM\nThursday: 11:00AM-3:00AM\nFriday: 11:00AM-3:00AM\nSaturday: 11:00AM-3:00AM\nSunday: 12:00PM-3:00AM</string>
    <string name="whereElseHours">Monday: Closed\nTuesday: Closed\nWednesday: 12:00PM-3:00AM\nThursday: 12:00PM-3:00AM\nFriday: 12:00PM-3:00AM\nSaturday: 12:00PM-3:00AM\nSunday: Closed</string>
    <string name="waitTimeTitle">Average Wait Times for today</string>
    <string name="BobbyTPhone">3174031223</string>
    <string name="BrothersPhone">3174031223</string>
    <string name="CactusPhone">3174031223</string>
    <string name="HarrysPhone">3174031223</string>
    <string name="WhereElsePhone">3174031223</string>
    <string name="waitingFor">You\'ve been waiting for:</string>
    <string name="twelveAM">12:00AM</string>
    <string name="oneAM">01:00AM</string>
    <string name="twoAM">02:00AM</string>
    <string name="threeAM">03:00AM</string>
    <string name="fourAM">04:00AM</string>
    <string name="fiveAM">05:00AM</string>
    <string name="sixAM">06:00AM</string>
    <string name="sevenAM">07:00AM</string>
    <string name="eightAM">08:00AM</string>
    <string name="nineAM">09:00AM</string>
    <string name="tenAM">10:00AM</string>
    <string name="elevenAM">11:00AM</string>
    <string name="twelvePM">12:00PM</string>
    <string name="onePM">01:00PM</string>
    <string name="twoPM">02:00PM</string>
    <string name="threePM">03:00PM</string>
    <string name="fourPM">04:00PM</string>
    <string name="fivePM">05:00PM</string>
    <string name="sixPM">06:00PM</string>
    <string name="sevenPM">07:00PM</string>
    <string name="eightPM">08:00PM</string>
    <string name="ninePM">09:00PM</string>
    <string name="tenPM">10:00PM</string>
    <string name="elevenPM">11:00PM</string>
    <string name="defaultWait">Closed or No Data</string>
    
</resources>
