<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7e00950f"
    tools:context=".CactusActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/activity_bobby_t_bg"
        app:layout_constraintBottom_toTopOf="@+id/imgCactus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblcactusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#7c000000"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/cactusTitle"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imgCactus"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="100dp"
        android:background="#00950f"
        android:contentDescription="@string/cactusTitle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/lblCactusAddr"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cactus_logo_trans" />

    <TextView
        android:id="@+id/lblCactusAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:maxLines="2"
        android:text="@string/cactusAddrTwoLines"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCactusWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCactus" />

    <TextView
        android:id="@+id/lblCactusHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waitHours"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/lblCactusWait"
        app:layout_constraintTop_toBottomOf="@+id/imgCactus" />

    <TextView
        android:id="@+id/lblCactusMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/waitMins"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/lblCactusHours"
        app:layout_constraintTop_toBottomOf="@+id/imgCactus" />

    <Button
        android:id="@+id/btnCallCactus"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/callCactus"
        app:layout_constraintBottom_toTopOf="@+id/btnMapCactus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMapCactus"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/maps"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerCactus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTimerCactus"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>