<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bkgd"
    tools:context=".HarrysActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/activity_bobby_t_bg"
        app:layout_constraintBottom_toTopOf="@+id/imgHarrys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblHarrysTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#7c000000"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/harrysTitle"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imgHarrys"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="100dp"
        android:background="#000000"
        android:contentDescription="@string/harrysTitle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/lblHarrysAddr"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/harrys_logo" />

    <TextView
        android:id="@+id/lblHarrysAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:maxLines="2"
        android:text="@string/bobbyAddrTwoLines"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblHarrysWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHarrys" />

    <TextView
        android:id="@+id/lblHarrysHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waitHours"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/lblHarrysWait"
        app:layout_constraintTop_toBottomOf="@+id/imgHarrys" />

    <TextView
        android:id="@+id/lblHarrysMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/waitMins"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/lblHarrysHours"
        app:layout_constraintTop_toBottomOf="@+id/imgHarrys" />

    <Button
        android:id="@+id/btnCallHarrys"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/callHarrys"
        app:layout_constraintBottom_toTopOf="@+id/btnMapHarrys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMapHarrys"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="8dp"
        android:text="@string/maps"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerHarrys"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTimerHarrys"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>