<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70ff58c7"
    tools:context=".CactusActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/activity_bobby_t_bg"
        app:layout_constraintBottom_toTopOf="@+id/imgWhereElse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblWhereElseTitleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#7c000000"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/whereElseTitle"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imgWhereElse"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="100dp"
        android:background="#ff00aa"
        android:contentDescription="@string/whereElseTitle"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/lblWhereElseAddr"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whereelse_logo" />

    <TextView
        android:id="@+id/lblWhereElseAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:maxLines="2"
        android:text="@string/whereElseAddrTwoLines"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblWhereElseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWhereElse" />

    <TextView
        android:id="@+id/lblWhereElseHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waitHours"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/lblWhereElseWait"
        app:layout_constraintTop_toBottomOf="@+id/imgWhereElse" />

    <TextView
        android:id="@+id/lblWhereElseMins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/waitMins"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/lblWhereElseHours"
        app:layout_constraintTop_toBottomOf="@+id/imgWhereElse" />

    <Button
        android:id="@+id/btnCallWhereElse"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="67dp"
        android:text="@string/callWhereElse"
        app:layout_constraintBottom_toTopOf="@+id/btnMapWhereElse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMapWhereElse"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/maps"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerWhereElse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTimerWhereElse"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>